# ParallelKMeans

./: CMakeLists.txt  README.md
src/: main.cpp
src/Parallel Version/: parallel_kmeans.cpp  parallel_kmeans.h
src/Sequential Version/: sequential_kmeans.cpp  sequential_kmeans.h
src/Utility/: read_dataset.cpp  read_dataset.h  utils.cpp  utils.h
